<resources>
    <string name="app_name">Yct Alumni</string>
    <string name="action_settings">Settings</string>
    <string name="action_logout">Logout</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_signup">SignupActivity</string>

    <string name="parse_app_id">jNqXGXz8ZVUQsa1xQLI5zVx2rLago4LVTCghSvzg</string>
    <string name="parse_client_key">LctrRVkg6mnKtKBtKn6DKCI5WynAVwxGnAqEVz2j</string>

    <string-array name="course">
        <item>Choose course studied</item>
        <item> B.SC(ED) ART EDUCATION</item>
        <item> B.SC(ED) BIOLOGY EDUCATION</item>
        <item> B.SC(ED) BUSINESS EDUCATION</item>
        <item> B.SC(ED) CHEMISTRY EDUCATION</item>
        <item> B.SC(ED) COMPUTER EDUCATION</item>
        <item> B.SC(ED) HOME ECONOMICS EDUCATION</item>
        <item> B.SC(ED) INDUSTRIAL TECHNICAL EDUCATION</item>
        <item> B.SC(ED) INTEGRATED SCIENCE EDUCATION</item>
        <item> B.SC(ED) MATHEMATICS EDUCATION</item>
        <item> B.SC(ED) PHYSICS EDUCATION</item>
        <item> ND (STATISTICS) PART TIME</item>
        <item> ND (OFFICE TECHNOLOGY MANAGEMENT) PART TIME</item>
        <item> ND (SCIENCE LABORATORY TECHNOLOGY) PART TIME</item>
        <item> ND (QUANTITY SURVEYING) PART TIME</item>
        <item> ND (PRINTING TECHNOLOGY) PART TIME</item>
        <item> ND (MECHANICAL ENGINEERING) PART TIME</item>
        <item> ND (INDUSTRIAL MAINTENANCE ENGINEERING) PART TIME</item>
        <item> ND (HOSPITALITY MANAGEMENT) PART TIME</item>
        <item> ND (GENERAL ART) PART TIME</item>
        <item> ND (FOOD TECHNOLOGY) PART TIME</item>
        <item> ND (ESTATE MANAGEMENT &amp; VALUATION) PART TIME</item>
        <item> ND (ELECTRICAL ENGINEERING) PART TIME</item>
        <item> ND (COMPUTER SCIENCE) PART TIME</item>
        <item> ND (CIVIL ENGINEERING) PART TIME</item>
        <item> ND (BUSINESS ADMINISTRATION) PART TIME</item>
        <item> ND (BUILDING TECHNOLOGY) PART TIME</item>
        <item> ND (ACCOUNTANCY) PART TIME</item>
        <item> HND (STATISTICS) PART TIME</item>
        <item> ND (BANKING &amp; FINANCE) PART TIME</item>
        <item> HND (MECHANICAL ENGINEERING) PART TIME</item>
        <item> HND (ELECTRICAL ENGINEERING) PART TIME</item>
        <item> HND (COMPUTER SCIENCE) PART TIME</item>
        <item> HND (CIVIL ENGINEERING) PART TIME</item>
        <item> HND (BUSINESS ADMINISTRATION) PART TIME</item>
        <item> HND (BUILDING TECHNOLOGY) PART TIME</item>
        <item> HND (COMPUTER ENGINEERING) FULL TIME</item>
        <item> PGD URBAN &amp; REGIONAL PLANNING</item>
        <item> ND (AGRICULTURAL TECHNOLOGY) FULL TIME</item>
        <item> ND (MASS COMMUNICATION) FULL TIME</item>
        <item> HND (ACCOUNTANCY) FULL TIME</item>
        <item> HND (BIOCHEMISTRY) FULL TIME</item>
        <item> HND (BOOK PUBLISHING) FULL TIME</item>
        <item> HND (BUILDING TECHNOLOGY) FULL TIME</item>
        <item> HND (BUSINESS ADMINISTRATION) FULL TIME</item>
        <item> HND (CHEMISTRY) FULL TIME</item>
        <item> HND (CIVIL ENGINEERING) FULL TIME</item>
        <item> HND (COMPUTER SCIENCE) FULL TIME</item>
        <item> HND (ELECTRICAL ENGINEERING) FULL TIME</item>
        <item> HND (ENVIRONMENTAL BIOLOGY) FULL TIME</item>
        <item> HND (ACCOUNTANCY) PART TIME</item>
        <item> HND (FOOD TECHNOLOGY) FULL TIME</item>
        <item> HND (GRAPHIC DESIGN) FULL TIME</item>
        <item> HND (INDUSTRIAL MAINTENANCE ENGINEERING) FULL TIME</item>
        <item> HND (MECHANICAL ENGINEERING) FULL TIME</item>
        <item> HND (MICROBIOLOGY) FULL TIME</item>
        <item> HND (PAINTING) FULL TIME</item>
        <item> HND (PHYSICS WITH ELECTRONICS) FULL TIME</item>
        <item> HND (QUANTITY SURVEYING) FULL TIME</item>
        <item> HND (SCULPTURE) FULL TIME</item>
        <item> HND (OFFICE TECHNOLOGY MANAGEMENT - BILINGUAL) FULL TIME</item>
        <item> HND (STATISTICS) FULL TIME</item>
        <item> HND (TEXTILE TECHNOLOGY) FULL TIME</item>
        <item> HND (URBAN &amp; REGIONAL PLANNING) FULL TIME</item>
        <item> HND (INDUSTRIAL DESIGN) FULL TIME</item>
        <item> CP (VISUAL ART) PART TIME</item>
        <item> ND (GENERAL ART) FULL TIME</item>
        <item> ND (INDUSTRIAL DESIGN - FASHION) FULL TIME</item>
        <item> ND (PRINTING TECHNOLOGY) FULL TIME</item>
        <item> ND (CIVIL ENGINEERING) FULL TIME</item>
        <item> ND (COMPUTER ENGINEERING) FULL TIME</item>
        <item> ND (ELECTRICAL ENGINEERING) FULL TIME</item>
        <item> ND (INDUSTRIAL MAINTENANCE ENGINEERING) FULL TIME</item>
        <item> ND (MECHANICAL ENGINEERING) FULL TIME</item>
        <item> ND (METALLURGICAL ENGINEERING) FULL TIME</item>
        <item> ND (ARCHITECTURE) FULL TIME</item>
        <item> ND (BUILDING TECHNOLOGY) FULL TIME</item>
        <item> ND (ESTATE MANAGEMENT &amp; VALUATION) FULL TIME</item>
        <item> ND (QUANTITY SURVEYING) FULL TIME</item>
        <item> ND (SURVEYING &amp; GEOINFORMATICS) FULL TIME</item>
        <item> ND (URBAN &amp; REGIONAL PLANNING) FULL TIME</item>
        <item> ND (ACCOUNTANCY) FULL TIME</item>
        <item> ND (BANKING &amp; FINANCE) FULL TIME</item>
        <item> ND (BUSINESS ADMINISTRATION) FULL TIME</item>
        <item> ND (OFFICE TECHNOLOGY MANAGEMENT) FULL TIME</item>
        <item> ND (SCIENCE LABORATORY TECHNOLOGY) FULL TIME</item>
        <item> ND (STATISTICS) FULL TIME</item>
        <item> ND (COMPUTER SCIENCE) FULL TIME</item>
        <item> ND (FOOD TECHNOLOGY) FULL TIME</item>
        <item> ND (HOSPITALITY MANAGEMENT) FULL TIME</item>
        <item> ND (TEXTILE TECHNOLOGY) FULL TIME</item>
        <item> ND (LEISURE &amp; TOURISM) FULL TIME</item>
        <item> HND (MARKETING) FULL TIME</item>
        <item> CP (PRINTING TECHNOLOGY) PART TIME</item>
        <item> HND (ESTATE MANAGEMENT &amp; VALUATION) FULL TIME</item>
        <item> CP (PHOTOGRAPHY) PART TIME</item>
        <item> HND (ARCHITECTURE) FULL TIME</item>
        <item> CP (DRESS MAKING) PART TIME</item>
        <item> HND (PRINTING TECHNOLOGY) FULL TIME</item>
        <item> HND (HOSPITALITY MANAGEMENT) FULL TIME</item>
        <item> HND (SURVEYING &amp; GEOINFORMATICS) FULL TIME</item>
        <item> HND (OFFICE TECHNOLOGY MANAGEMENT) FULL TIME</item>
        <item> HND (INDUSTRIAL DESIGN) PART TIME</item>
        <item> HND (OFFICE TECHNOLOGY MANAGEMENT) PART TIME</item>
        <item> HND (MARKETING) PART TIME</item>
        <item> CP (CERAMICS) PART TIME</item>
        <item> TECH CERT (PAINTS &amp; COATINGS TECHNOLOGY) PART TIME</item>
        <item> ND (AGRICULTURAL &amp; BIO-ENVIRONMENTAL ENGINEERING) FULL TIME</item>
        <item> ND (MARKETING) FULL TIME</item>
        <item> ND (MARINE ENGINEERING) FULL TIME</item>
        <item> ND (POLYMER TECHNOLOGY) FULL TIME</item>
        <item> ND (COMPUTER ENGINEERING) PART TIME</item>
        <item> ND (MASS COMMUNICATION) PART TIME</item>
        <item> HND (TEXTILE DESIGN) FULL TIME</item>
        <item> HND (INDUSTRIAL MAINTENANCE ENGINEERING) PART TIME</item>
        <item> HND (FOOD TECHNOLOGY) PART TIME</item>
        <item> ND (METALLURGICAL ENGINEERING) PART TIME</item>
        <item> ND (INDUSTRIAL DESIGN - FASHION) PART TIME</item>
        <item> HND (LEISURE &amp; TOURISM) PART TIME</item>
        <item> HND (BIOCHEMISTRY) PART TIME</item>
        <item> HND (CHEMISTRY) PART TIME</item>
        <item> HND (ENVIRONMENTAL BIOLOGY) PART TIME</item>
        <item> HND (MICROBIOLOGY) PART TIME</item>
        <item> ND (PUBLIC ADMINISTRATION) FULL TIME</item>
        <item> ND (WELDING AND FABRICATION ENGINEERING) FULL TIME</item>
    </string-array>
    <string name="title_activity_home">Yct Alumni</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_album">Album</string>


    <string name="placeholder_lorem_ipsum">Lorem ipsum dolor set it</string>


    <string name="nav_drawer_recently_added">Recently Added</string>
    <string name="toast_saved">Wallpapaer saved to #</string>
    <string name="toast_saved_failed">Sorry! Failed to save wallpaper</string>
    <string name="toast_wallpaper_set">Wallpapaer updated!</string>
    <string name="toast_wallpaper_set_failed">Sorry! Unable to set wallpapaer</string>
    <string name="splash_error">Unable to download wallpapers. Verify your google\'s user name in settings or device doesn\'t have internet connection!</string>
    <string name="set_wallpaper">Set</string>
    <string name="download_wallpaper">Download</string>
    <string name="msg_unknown_error">Sorry! Unknown error occurred.</string>
    <string name="msg_wall_fetch_error">Sorry! Unable to fetch wallpaper(s). Verify app settings or device doesn\'t have internet connection.</string>
    <string name="toast_enter_google_username">Please enter google username</string>
    <string name="toast_enter_valid_grid_columns">Please enter valid number of columns</string>
    <string name="toast_enter_gallery_name">Please enter gallery directory name</string>
    <string name="lbl_google_username">Google username</string>
    <string name="lbl_no_grid_columns">Number of grid columns</string>
    <string name="lbl_gallery_name">Gallery directory name</string>
    <string name="lbl_btn_save">Save</string>
    <string name="title_activity_full_screen">Full Picture</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_all_members">Alumni Members</string>
    <string name="title_activity_news">News-Letter</string>
    <string name="title_activity_view_member">ViewMember</string>
    <string name="title_activity_forum">Forum</string>


    <string name="action_gcm_register">GCM Register</string>
    <string name="action_gcm_unregister">GCM Unregister</string>
    <string name="login">Choose a username:</string>
    <string name="username">Username</string>
    <string name="login_submit">Join the Chat!</string>

    <string name="enter_new_channel">Enter new channel:</string>
    <string name="send_message">Send a message...</string>
    <string name="action_sign_out">Sign Out</string>
    <string name="here_now">Here Now:</string>
    <string name="app_descrip">This app is design to help Alumni connect,
        if there\'s any feedback, please send a mail to moderateeepheezy@gmail.com</string>
    <string name="app_credits">facebook id: abdulhafeesawal@facebook.com</string>
    <string name="title_activity_search">Search For An Alumni Member</string>
</resources>
